
=== Bugfixes
* ActionMailer delivery_method should not be set to test (#41, Luke Melia)
* Reverse incorrectly ordered args in webrat select step (#43, David Chelimsky)
* Support comments above the first scenario (#31, Aslak Hellesøy)
* Fixed the HTML Formatter to use actual values for FIT table headers (#30, Joseph Wilk)

=== New features
* Added new --out option to make it easier to specify output from Rake and cucumber.yml

== 0.1.7

This release fixes a few bugs and adds some new features. The most notable features are:

=== Calling steps from steps

Step definitions are a little bit closer to having regular method semantics.
You define them, but now you can also call them from other steps. Here is an
example:

  Given /I am logged in as an (.*) named (.*)$/ do |role, name|
    Given "I am registered as #{role}, #{name}, secret"
    When "I log in with #{name}, secret"
  end
  
  Given /I am registered as (.*), (.*), (.*)/ do |role, name, password|
    # (Code removed for brevity)
  end

  When /I log in with (.*), (.*)/ do |name, password|
    # (Code removed for brevity)
  end

This means that steps can be reused in other steps. The GivenScenario feature achieves a similar
effect (on the scenario level), but this feature is something we're not very happy with, mostly
because it's not parameterisable. Calling steps from steps is.

GivenScenario will still be working several releases, but the plan is to remove it completely in 
the 0.3.0 release.

=== Seeing where a step is defined

Prior to this release it could be hard to find out where the ruby step definition matching
a plain text step is defined. Not anymore! Cucumber will now output this:

  Scenario: Regular numbers
    Given I have entered 3 into the calculator   # features/steps/calculator_steps.rb:12
    And I have entered 2 into the calculator     # features/steps/calculator_steps.rb:12
    When I press divide                          # features/steps/calculator_steps.rb:16